Changed the construction-text margin on the under construction page to fix alignment issues

--- a/fusiondigital/src/components/UnderConstruction/UnderConstruction.scss
+++ b/fusiondigital/src/components/UnderConstruction/UnderConstruction.scss
@@ -12,7 +12,7 @@
 }
 
 .construction-text {
-  margin-top: -8em;
+  margin-top: 1em;
   color: v.$silver;
 }
 
